<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

    </LinearLayout>

    <ScrollView
        android:layout_above="@id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/teamhomefield" />

                    <Spinner
                        android:id="@+id/TeamHome"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/teamguestfield" />

                    <Spinner
                        android:id="@+id/TeamGuest"
                        android:layout_width="match_parent"
                        android:layout_height="35dp">

                        <requestFocus />
                    </Spinner>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:text="@string/goalshomefield" />

                    <EditText
                        android:id="@+id/GoalsHome"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/goalsguestfield" />

                    <EditText
                        android:id="@+id/GoalsGuest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>